--- a/Latihan-2/app/src/main/res/layout/activity_second.xml
+++ b/Latihan-2/app/src/main/res/layout/activity_second.xml
@@ -86,7 +86,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="PESAN"
+        tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="148dp"
-        tools:layout_editor_absoluteY="231dp"
-        tools:ignore="MissingConstraints" />
+        tools:layout_editor_absoluteY="231dp" />
 </android.support.constraint.ConstraintLayout>
